# Feedback-Delay-Networks

./: .gitmodules  .travis.yml  README.md  create.sh  setup.sh  test.sh
AmpFeedbackFDN/: CMakeLists.txt
AmpFeedbackFDN/Source/: AmpFeedbackFDN.cpp  AmpFeedbackFDN.h  AmpFeedbackFDNProcessor.cpp  AmpFeedbackFDNProcessor.h
BaseFDN/: CMakeLists.txt
BaseFDN/Source/: BaseFDNProcessor.cpp  BaseFDNProcessor.h  gui.xml
ChorusFDN/: CMakeLists.txt
ChorusFDN/Source/: ChorusFDN.cpp  ChorusFDN.h  ChorusFDNProcessor.cpp  ChorusFDNProcessor.h
FBExperiment/: CMakeLists.txt
FBExperiment/Source/: FBExperimentProcessor.cpp  FBExperimentProcessor.h  FBProc.h
LevelDependentFDN/: CMakeLists.txt
LevelDependentFDN/Source/: LevelDependentFDNProcessor.cpp  LevelDependentFDNProcessor.h  LevelDetectFDN.cpp  LevelDetectFDN.h
MatrixFaderFDN/: CMakeLists.txt
MatrixFaderFDN/Source/: MatrixFaderFDN.cpp  MatrixFaderFDN.h  MatrixFaderFDNProcessor.cpp  MatrixFaderFDNProcessor.h
ReverbTester/: CMakeLists.txt
ReverbTester/Source/: Console.cpp  Console.h  FilePlayer.cpp  FilePlayer.h  IRViewer.cpp  IRViewer.h  ReverbTesterEditor.cpp  ReverbTesterEditor.h  ReverbTesterProcessor.cpp  ReverbTesterProcessor.h
SchroederArch2/: CMakeLists.txt
SchroederArch2/Source/: Schroeder2.h  SchroederArch2Processor.cpp  SchroederArch2Processor.h
Simulations/: allpass.py  orthnorm_testing.py
shared/: AllpassDelay.h  Biquad.h  CMakeLists.txt  DCBlocker.h  DelayLine.cpp  DelayLine.h  DelayUtils.h  DryWetProcessor.h  FDN.cpp  FDN.h  LPF.h  LevelDetector.cpp  LevelDetector.h  MixingMatrixUtils.h  PluginProcessor.cpp  PluginProcessor.h  ShelfFilter.cpp  ShelfFilter.h  SineWave.h  SmoothAllpassDelay.h  SmoothDelay.cpp  SmoothDelay.h
shared/r8lib/: CMakeLists.txt
